--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "style-loader": "^3.3.0"
   }
 }
